--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+.nav-btn{
+  background-color: #34c439 !important;
+  font-size: 30px !important;
+  font-weight: 700 !important;
+ padding: 5px 45px!important; 
+ border: none  !important;
+}
+.nav-btn1{
+  background-color: #011101 !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+ padding: 7px 10px!important; 
+ border: 2px solid #012b04 !important;
+}
+.nav-btn2{
+  background-color: #36d33b!important;
+  font-size: 20px !important;
+  font-weight: 600 !important; 
+ padding: 8px 10px!important; 
+ border: 2px solid #36d63b !important;
+}
+.header{
+  padding: 30px;
+  border-bottom: 2px solid #36d33b  !important;
+
+}
+body{
+  background-image:url("Media/safuubackground.png") ;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.paper{
+  background-color:"011101" !important;
+  padding:"5px" !important;
+  color:white !important;
+  border: 2px solid #012b04 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.sidebar{
+  left: 0;
+  border-right: 2px solid #34c439 !important;
+  border-left: 2px solid #34c439 !important;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+}
+.dashboard{
   display: flex;
-  flex-direction: column;
+  background-color: #011a01 !important;
+  /* background-size: 5px !important; */
+  text-decoration: none !important;
+  color: white !important;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  /* justify-content: center; */
+  padding:  10px 30px;
+  margin: 20px;
 
-.App-link {
-  color: #61dafb;
+  /* margin-bottom: 40px !important; */
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.side{
+  margin: 10px;
+  padding:30px;
 }
