--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 
 .header{
   padding: 30px;
+  .header2{
+    display: none;
+  }
   // 
   
   
@@ -63,14 +66,15 @@ body{
   border-right: 2px solid #34c439 !important;
   border-left: 2px solid #34c439 !important;
   position: fixed;
-  margin-left: 25px;
-  margin-right: 15px;
+  margin-left: 20px;
+  // margin-right: 15px !important;
 
 
 }
+
 .dashboard{
   z-index: 0;
-  display: flex;
+  display: flex;  
   background-color: #011a01 !important;
   /* background-size: 5px !important; */
   text-decoration: none !important;
@@ -117,7 +121,260 @@ body{
     color: #07de0f;
 
   }
+}
+.swap{
+  margin-right: 10px ;
+  
+  .btn{
+    background-color: transparent !important;
+    border: none !important;
+  }
+  .card1{
+    background-color: transparent!important;
+    color: white !important;
+    border-color: #07de0f !important;
+    border-width: 3px;
+    border-radius: 15px !important;
+    .btn2{
+      background-color: #36d33b !important;
+      font-size: 20px !important;
+      font-weight: 600 !important; 
+     padding: 8px 10px!important; 
+     border: 2px solid #36d63b !important;
+     margin-right: 40px;
+     margin-left: 30px;
+    }
+  }
+  .card2{
+    background-color: rgba(46,51,92,.25) !important;
+    border-color: #16172e;
+  
+    color: white !important;
+    // color: black;
+    margin-left: 25px;
+  }
+  .swapicon{
+    display: flex;
+    flex-direction: row;
+  }
+  .arowicon{
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+  }
+  .dropdown-menu{
+    background-color: black;
+  }
+  .dropdown-item{
+    color: white !important;
+    
+  }
+}
+.analytics{
+  .btn{
+    background-color: #34c439 !important;
+    border: none !important;
+    // background-color: transparent !important;
+    // border: none !important;
+  }
+  .card1{
+    background-color: transparent!important;
+    color: white !important;
+    border-color: #07de0f !important;
+    // border-width: 3px;
+    border-radius: 15px !important;
+  }
+  .card2{
+    background-color: rgba(46,51,92,.25) !important;
+    border-color: #16172e;
+  
+    color: white !important;
+    // color: black;
+    margin-left: 25px;
+  }
+  .swapicon{
+    display: flex;
+    flex-direction: row;
+  }
+  .arowicon{
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+  }
+  .dropdown-menu{
+    background-color: black;
+  }
+  .dropdown-item{
+    color: white !important;
+    
+  }
+  .recent{
+    background-color: transparent !important;
+    // border-color: #07de0f !important;
+    border : 1px solid #07de0f !important;
+    color: #34c439;
+    
+  }
+  .transaction{
+    a{
 
+      text-decoration: none !important;
+      color: #34c439;
+    }
+    hr{
+      color: white !important;
+    }
+  }
+
+}
+.calculator{
+  .slide2{
+    width : 350px !important;
+    color: grey !important;
+
+  }
+  .card1{
+    background-color: transparent!important;
+    color: white !important;
+    border-color: #07de0f !important;
+    // border-width: 3px;
+    border-radius: 15px !important;
+  }
+  .card2{
+    background-color: rgba(46,51,92,.25) !important;
+    border-color: #16172e;
+  
+    color: white !important;
+    // color: black;
+    // margin-left: 5px;
+  }
+  .price{
+    color: hsla(0,0%,100%,.6);
+  }
+  .amount{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: white;
+  }
+  
+  
+  
   
   
 }
+@media screen and (max-width:"600px"){
+  .header{
+    .header1{
+      display: none;
+
+    }
+    .header2{
+      display: block;
+    }
+
+  }
+  
+  .sidebar{
+    display: none;
+  }
+
+  .dashboard-market{
+    .dashboardcards{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      .card{
+        width: 300px !important;
+      }
+    }
+    .accountcards{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      .card{
+        width: 300px !important;
+      }
+      h5{
+        font-size: medium;
+      }
+
+
+    }
+  
+  }
+  .swap{
+    .MAX{
+      display: none;
+    }
+    .card1{
+      margin-bottom: 50px;
+      // margin-right: 50px;
+      // display: flex;
+      // justify-content: center;
+        width: 300px !important;
+    }
+    .card2{
+      display: flex;
+      justify-content: center;
+        width: 240px !important;
+    }
+  }
+  .analytics{
+    .investcard{
+      display: flex;
+      flex-direction: column;
+      .card{
+        width: 270px !important;
+      }
+    }
+    .card3{
+      width: 285px !important;
+      .transaction{
+        display: flex;
+        flex-direction: column;
+        justify-content: none !important;
+      }
+    }
+  }
+  .calculator{
+    .initial{
+      h5{
+         font-size: medium;
+      }
+    }
+    .price{
+      display: flex;
+      flex-direction: column;
+    }
+    .max{
+      display: flex;
+      flex-direction: column;
+    }
+    .card2{
+      width: 210px !important;
+      h5{
+        font-size: medium !important;
+      }
+    }
+    .slide2{
+      width: 210px !important;
+    }
+    .amount{
+      width: 65px;
+    }
+  }
+}
+.offcanvas-body{
+    // backdrop-filter: blur(10px);
+    background-color:rgba(0, 0, 0, 0.87);
+    // background-color: rgb(155 121 121 / 100%);
+    -webkit-tap-highlight-color: transparent;
+}
+.offcanvas-header{
+  background-color:rgba(0, 0, 0, 0.87);
+  
+
+}
+
+
